# pipeline

./: CMakeLists.txt
pipelinelib/: CMakeLists.txt
pipelinelib/incl/: ConstNode.hpp  InputAdapter.hpp  NodeAlgorithms.hpp  NodeBase.hpp  NodeExecution.hpp  NodeStructure.hpp  Observer.hpp  PipelineException.hpp
pipelinelib/src/: NodeAlgorithms.cpp  NodeExecution.cpp  Observer.cpp  PipelineException.cpp
pipelinelib_test/: AdvancedNodeTest.cpp  CMakeLists.txt  ObserverTest.cpp  PipelineOperationTest.cpp  main.cpp
pipelinelib_test/src/: AdvancedNodeTest.cpp  InputAdapterTest.cpp  ObserverTest.cpp  PipelineOperationTest.cpp
